# opcua-cps-kitchen

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  browsenames.h  build.bash  build_debug.bash  build_doc.bash  build_for_sanitizer.bash  clock.cpp  controller.cpp  node_ids.hpp  recipe_testframe.cpp  recipes.json  robot.cpp  robot_demo.cpp  session_id.hpp  start_clock.bash  start_clock_instance.cpp  start_controller_instance.cpp  start_conveyor_instance.cpp  start_kitchen_instance.cpp  start_robot.bash  start_robot_instance.cpp  statistics-writer-main.cpp  time_unit.hpp  types.hpp
actions/: CMakeLists.txt
actions/include/: capability_actions.hpp  robot_actions.hpp  time_actions.hpp
actions/src/: capability_actions.cpp  robot_actions.cpp  time_actions.cpp
capabilities/: CMakeLists.txt  r1.json  r2.json  r3.json  r4.json
capabilities/include/: capability_parser.hpp
capabilities/src/: capability_parser.cpp
controller/: CMakeLists.txt
controller/include/: controller.hpp
controller/src/: controller.cpp
conveyor/: CMakeLists.txt
conveyor/include/: conveyor.hpp
conveyor/src/: conveyor.cpp
demos/: CMakeLists.txt  browse_node.cpp  client_call_method.cpp  client_discovery_lookup_minimal.cpp  clock_demo.cpp  discovery_server.cpp  object_node.cpp  object_type_node.cpp  robot_demo.cpp  server_method.cpp  string_client_for_subscription.cpp  string_server_for_subscription.cpp  tutorial_server_object.c
kitchen/: CMakeLists.txt
kitchen/include/: kitchen.hpp
kitchen/src/: kitchen.cpp
mape/include/: kitchen_mape.hpp  mape.hpp
mape/src/: kitchen_mape.cpp
mape_implementation/: CMakeLists.txt
mape_implementation/include/: kitchen_mape.hpp
mape_implementation/src/: kitchen_mape.cpp
mape_interface/: CMakeLists.txt
mape_interface/include/: mape.hpp
recipe/: CMakeLists.txt
recipe/include/: recipe_parser.hpp
recipe/src/: recipe_parser.cpp
robot/: CMakeLists.txt
robot/include/: robot.hpp  robot_state.hpp  robot_tool.hpp  robot_tools.hpp
robot/src/: robot.cpp
start_scripts/: start_clock.bash  start_controller.bash  start_conveyor.bash  start_dashboard.bash  start_kitchen.bash  start_robot.bash  start_robots.bash  startup_kitchen.bash
statistics/: CMakeLists.txt
statistics/include/: shared_memory_parameters.hpp  statistics_recorder.hpp  statistics_writer.hpp
statistics/src/: statistics_recorder.cpp  statistics_writer.cpp
test_apps/: CMakeLists.txt  tick_clock_client.cpp
tests/: CMakeLists.txt  information_node_tester.cpp  recipe_testframe.cpp  session_id_testframe.cpp  test_now_monotonic.cpp
tick_clock/: CMakeLists.txt
tick_clock/include/: tick_clock.hpp
tick_clock/src/: tick_clock.cpp
timestamp/include/: timestamp_recorder.hpp
timestamp/src/: timestamp_recorder.cpp
utilities/: CMakeLists.txt
utilities/include/: information_node_inserter.hpp  information_node_manager.hpp  method_node_inserter.hpp  node_value_subscriber.hpp
utilities/src/: information_node_manager.cpp  method_node_inserter.cpp
wrappers/: CMakeLists.txt
wrappers/include/: callback_scheduler.hpp  client_browse.h  client_connection_establisher.hpp  discovery_and_connection.hpp  discovery_util.hpp  filtered_logger.hpp  information_node_inserter.hpp  information_node_reader.hpp  information_node_writer.hpp  method_node_caller.hpp  method_node_inserter.hpp  node_browser.hpp  node_browser_helper.hpp  node_value_subscriber.hpp  object_type_node_inserter.hpp  response_checker.hpp
wrappers/src/: callback_scheduler.cpp  client_browse.c  client_connection_establisher.cpp  discovery_and_connection.cpp  discovery_util.cpp  filtered_logger.cpp  information_node_inserter.cpp  information_node_reader.cpp  information_node_writer.cpp  method_node_caller.cpp  method_node_inserter.cpp  node_browser.cpp  node_browser_helper.cpp  node_value_subscriber.cpp  object_type_node_inserter.cpp  response_checker.cpp
